--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,16 +139,16 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,
-FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+FloatProperty=
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+StructProperty=
 BoolProperty=
 ArrayProperty=
 IntProperty=
-K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableSet=
 BaseWeapon_C=StructProperty.DefaultValueCategory.None,
 UserDefinedStruct=
 
@@ -174,17 +174,17 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Chloe
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Character/Character_sheet.Character_sheet
-OpenAssetsAtExit=/Game/TopDownBP/Character/CharacterStruct.CharacterStruct
+OpenAssetsAtExit=/Game/AIAgent/TestPawn2.TestPawn2
+OpenAssetsAtExit=/Game/AIAgent/ProtoTree.ProtoTree
+OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2586,11 +2586,11 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
-RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
