--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -181,6 +181,7 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/GW000979/TestPawn3.TestPawn3
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2195,6 +2196,51 @@ REINST_TopDownCharacter_C_136.Pawn=True
 REINST_TopDownCharacter_C_136.Input=True
 REINST_TopDownCharacter_C_136.Actor=True
 TestPawn_C.ComponentTick=True
+TestPawn3_C.TransformCommon=True
+TestPawn3_C.Animation=True
+TestPawn3_C.Mesh=True
+TestPawn3_C.Clothing=True
+TestPawn3_C.Physics=True
+TestPawn3_C.Collision=True
+TestPawn3_C.ClothingSimulation=True
+TestPawn3_C.Lighting=True
+TestPawn3_C.Rendering=True
+TestPawn3_C.Tags=True
+TestPawn3_C.Activation=True
+TestPawn3_C.Cooking=True
+TestPawn3_C.Character Movement: Jumping / Falling=True
+TestPawn3_C.Character Movement (General Settings)=True
+TestPawn3_C.Character Movement: Walking=True
+TestPawn3_C.Character Movement: Swimming=True
+TestPawn3_C.Character Movement: Flying=True
+TestPawn3_C.Character Movement: Custom Movement=True
+TestPawn3_C.Character Movement (Rotation Settings)=True
+TestPawn3_C.Character Movement: Physics Interaction=True
+TestPawn3_C.Character Movement (Networking)=True
+TestPawn3_C.Character Movement=True
+TestPawn3_C.Character Movement: Avoidance=True
+TestPawn3_C.Character Movement: NavMesh Movement=True
+TestPawn3_C.RootMotion=True
+TestPawn3_C.NavMovement=True
+TestPawn3_C.Velocity=True
+TestPawn3_C.PlanarMovement=True
+TestPawn3_C.MovementComponent=True
+TestPawn3_C.Shape=True
+TestPawn3_C.Navigation=True
+TestPawn3_C.Character=True
+TestPawn3_C.Camera=True
+TestPawn3_C.Pawn=True
+TestPawn3_C.Input=True
+TestPawn3_C.Actor=True
+TestPawn3_C.Materials=True
+TestMesh_C.Tick=True
+TestMesh_C.Rendering=True
+TestMesh_C.Replication=True
+TestMesh_C.Input=True
+TestMesh_C.Actor=True
+TestPawn3_C.Default=True
+TestPawn3_C.Tick=True
+TestPawn3_C.Replication=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2238,6 +2284,8 @@ TestPawn_C.ComponentTick=True
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/Chloe/UI/Ingame.Ingame=0
 /Game/AIAgent/TestPawn.TestPawn=1
+/Game/GW000979/TestMesh.TestMesh=1
+/Game/GW000979/TestPawn3.TestPawn3=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2257,8 +2305,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character=
-Pawn=
+Character="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C=
@@ -2320,6 +2368,7 @@ SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParam
 REINST_TestPawn2_C_69="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_TopDownCharacter_C_80="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_TopDownCharacter_C_91="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+TestPawn3_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2997,8 +3046,9 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
+RecentlyPlaced=/Game/GW000979/TestPawn3.TestPawn3;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
+RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Game/DemoFolder/DestructableWall.DestructableWall;
 RecentlyPlaced=/Game/DemoFolder/DestructWall.DestructWall;
 RecentlyPlaced=/Game/DemoFolder/DemoWall_DM.DemoWall_DM;
