--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,8 +113,8 @@ CurrentScalingGridSize=4
 
 [MRU]
 MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem2=/Game/Levels/terrain_test
+MRUItem1=/Game/Levels/terrain_test
+MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem3=/Game/Levels/assetlayout
 MRUItem4=/Game/Levels/Terrain-Test
 MRUItem5=/Game/Levels/test
@@ -223,7 +223,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 
 [EditorStartup]
@@ -4294,12 +4294,12 @@ ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem2=/Game/Chloe/UI/Ingame
-MRUItem3=/Game/GW000979/TopDownCharacterTest
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19
-MRUItem6=/Game/Levels/terrain_test
+MRUItem1=/Game/Levels/terrain_test
+MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem3=/Game/Chloe/UI/Ingame
+MRUItem4=/Game/GW000979/TopDownCharacterTest
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem6=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19
 MRUItem7=/Game/Models/Ben/small_bush
 MRUItem8=/Game/Models/Ben/02_-_Default
 MRUItem9=/Game/Models/David/LP_foliage
