--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -223,11 +223,11 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP
 None=======
 
 [EditorStartup]
-LastLevel=/Game/Levels/BlockOut
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2676,7 +2676,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2753,7 +2753,7 @@ REINST_TestPawn2_C_69="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \
 REINST_TopDownCharacter_C_80="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_TopDownCharacter_C_91="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TestPawn3_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacterTest_C=
+TopDownCharacterTest_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [DetailCategoriesAdvanced]
@@ -4293,12 +4293,12 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/BlockOut
-MRUItem1=/Game/Levels/terrain_test
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem3=/Game/Chloe/UI/Ingame
-MRUItem4=/Game/GW000979/TopDownCharacterTest
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/GW000979/TopDownCharacterTest
+MRUItem2=/Game/Levels/BlockOut
+MRUItem3=/Game/Levels/terrain_test
+MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem5=/Game/Chloe/UI/Ingame
 MRUItem6=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19
 MRUItem7=/Game/Models/Ben/small_bush
 MRUItem8=/Game/Models/Ben/02_-_Default
