fixed small problem

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -183,7 +183,6 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2073,7 +2072,7 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent=
 ShapeComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
@@ -2117,8 +2116,8 @@ REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Mo
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[15]\" "
 BaseWeapon_C=
 TestPawn3_C=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent=
+MeshComponent=
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
