Update  master final

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -182,6 +182,7 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2003,6 +2004,24 @@ TopDownCharacterShane_C.Rendering=True
 TopDownCharacterShane_C.Replication=True
 TopDownCharacterShane_C.Input=True
 TopDownCharacterShane_C.Actor=True
+TopDownCharacterCleaned_C.Default=True
+TopDownCharacterCleaned_C.Tick=True
+TopDownCharacterCleaned_C.Character=True
+TopDownCharacterCleaned_C.Camera=True
+TopDownCharacterCleaned_C.Pawn=True
+TopDownCharacterCleaned_C.Rendering=True
+TopDownCharacterCleaned_C.Replication=True
+TopDownCharacterCleaned_C.Input=True
+TopDownCharacterCleaned_C.Actor=True
+REINST_TopDownCharacterCleaned_C_84.None=True
+REINST_TopDownCharacterCleaned_C_84.Tick=True
+REINST_TopDownCharacterCleaned_C_84.Character=True
+REINST_TopDownCharacterCleaned_C_84.Camera=True
+REINST_TopDownCharacterCleaned_C_84.Pawn=True
+REINST_TopDownCharacterCleaned_C_84.Rendering=True
+REINST_TopDownCharacterCleaned_C_84.Replication=True
+REINST_TopDownCharacterCleaned_C_84.Input=True
+REINST_TopDownCharacterCleaned_C_84.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2907,6 +2926,7 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
 
 
