--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,6 +82,7 @@ None=======
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -209,7 +210,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
 ContentBrowserTab1.ActiveTypeFilters=StaticMesh
-ContentBrowserTab1.EnabledTypeFilters=StaticMesh
+ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
@@ -231,7 +232,7 @@ None=======
 LastLevel=/Game/Levels/TerrainMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
 
 [DetailCategories]
@@ -2622,6 +2623,19 @@ MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
 InstancedFoliageActor.TransformCommon=True
 InstancedFoliageActor.Input=True
 InstancedFoliageActor.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+GlobalLighting_C.Tick=True
+GlobalLighting_C.Replication=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2700,6 +2714,9 @@ None=======
 /Game/Materials/SandstoneMat.SandstoneMat=0
 /Game/Materials/SandTerrainMat.SandTerrainMat=0
 /Game/Materials/white_2.white_2=0
+/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=0
+/Game/Lighting/GlobalLighting.GlobalLighting=0
+/Game/Materials/Wood.Wood=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2788,7 +2805,7 @@ SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.Body
 Landscape="\"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 LandscapeProxy="\"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[0].ConstLayerInput\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[1].ConstLayerInput\" \"Object.Layers.Layers[2]\" \"Object.Layers.Layers[2].ConstLayerInput\" "
-MaterialExpression="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[0].ConstLayerInput\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[1].ConstLayerInput\" \"Object.Layers.Layers[2]\" \"Object.Layers.Layers[2].ConstLayerInput\" "
+MaterialExpression=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4099,8 +4116,8 @@ Voice.TimeStamp=2018.10.05-18.10.29
 Voice.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2018.10.05-18.09.50
 TextureEditor.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2018.09.20-07.56.12
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.09.21-08.05.11
+HierarchicalLODUtilities.LastCompileMethod=External
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -4151,6 +4168,11 @@ None=======
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/Lighting/GlobalLighting.GlobalLighting;
 RecentlyPlaced=/Game/Models/Chris/Cart_Wheel_-_Chris_-_10-09-19.Cart_Wheel_-_Chris_-_10-09-19;
 RecentlyPlaced=/Game/Models/Aaron/bucket-aaroncrossley-09-09-19.bucket-aaroncrossley-09-09-19;
 RecentlyPlaced=/Game/Models/Jack/Ladder-jack-14-01-19.Ladder-jack-14-01-19;
@@ -4166,11 +4188,6 @@ RecentlyPlaced=/Game/Models/Ben/vase_light_damage_Ben_Wilkinson_09-01-19.vase_li
 RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
 RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/Models/Chris/Wheelbarrow_-_Chris_-_10-01-19__1_.Wheelbarrow_-_Chris_-_10-01-19__1_;
-RecentlyPlaced=/Game/Models/Aaron/table-aaron-16-01-19.table-aaron-16-01-19;
-RecentlyPlaced=/Game/Models/Ben/well_ben_wilkinson_10-01-19.well_ben_wilkinson_10-01-19;
-RecentlyPlaced=/Game/Models/Dylan/Shovel_Dylan_10-01-19.Shovel_Dylan_10-01-19;
-RecentlyPlaced=/Game/Models/Dylan/RopeCoil_Dylan_10-01-19__1_.RopeCoil_Dylan_10-01-19__1_;
-RecentlyPlaced=/Game/Models/Jack/Rock_Form_1.Rock_Form_1;
 None=======
 /Game/Chloe=(R=0.015597,G=0.066087,B=0.500000,A=1.000000)
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4178,6 +4195,7 @@ None=======
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
 bShowMobileStats=False
+bRealtimeMaterialViewport=False
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
@@ -4193,10 +4211,10 @@ MirrorOp=0
 NewLandscapeMaterialName=/Game/Materials/SandstoneMat.SandstoneMat
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-ToolStrength=1.000000
+ToolStrength=0.828571
 BrushComponentSize=64
-BrushRadius=242.063339
-BrushFalloff=0.161905
+BrushRadius=214.544724
+BrushFalloff=0.104762
 
 [MaterialEditor]
 PrimType=1
@@ -4332,26 +4350,26 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Green
-MRUItem1=/Game/Materials/white
-MRUItem2=/Game/Materials/white_2
-MRUItem3=/Game/Materials/Stone
-MRUItem4=/Game/Materials/SandstoneMat_Dark
-MRUItem5=/Game/Materials/SandstoneMat
-MRUItem6=/Game/Materials/Red
-MRUItem7=/Game/Materials/Quarry_Grid_Shown
-MRUItem8=/Game/Materials/SandTerrainMat
-MRUItem9=/Game/Levels/TerrainMap
-MRUItem10=/Game/Levels/BlockOut
-MRUItem11=/Game/Levels/assetlayout
-MRUItem12=/Game/Levels/terrain_test
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem14=/Game/GW000979/TopDownCharacterTest
-MRUItem15=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem16=/Game/Chloe/UI/Ingame
-MRUItem17=/Game/Models/Dylan/Pickaxe_Dylan_10-01-19
-MRUItem18=/Game/Models/Ben/small_bush
-MRUItem19=/Game/Models/Ben/02_-_Default
+MRUItem0=/Game/Levels/TerrainMap
+MRUItem1=/Game/Lighting/GlobalLighting
+MRUItem2=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem3=/Game/Materials/Wood
+MRUItem4=/Game/Materials/SandTerrainMat
+MRUItem5=/Game/Materials/Green
+MRUItem6=/Game/Materials/white
+MRUItem7=/Game/Materials/white_2
+MRUItem8=/Game/Materials/Stone
+MRUItem9=/Game/Materials/SandstoneMat_Dark
+MRUItem10=/Game/Materials/SandstoneMat
+MRUItem11=/Game/Materials/Red
+MRUItem12=/Game/Materials/Quarry_Grid_Shown
+MRUItem13=/Game/Levels/BlockOut
+MRUItem14=/Game/Levels/assetlayout
+MRUItem15=/Game/Levels/terrain_test
+MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem17=/Game/GW000979/TopDownCharacterTest
+MRUItem18=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem19=/Game/Chloe/UI/Ingame
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
