--- a/SP_Prototype/Saved/Config/Windows/Engine.ini
+++ b/SP_Prototype/Saved/Config/Windows/Engine.ini
@@ -39,4 +39,12 @@ None=======
 [MagicLeapSettings]
 WindowMirrorMode=1
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
 
